2004-11-29  Richard Earnshaw  <rearnsha@arm.com>

	* arm-dis.c: Correct top-level comment.

2004-11-27  Richard Earnshaw  <rearnsha@arm.com>

	* arm-opc.h (arm_opcode, thumb_opcode): Add extra field for the
	architecuture defining the insn.
	(arm_opcodes, thumb_opcodes): Delete.  Move to ...
	* arm-dis.c (arm_opcodes, thumb_opcodes): Here.  Add architecutre
	field.
	Also include opcode/arm.h.
	* Makefile.am (arm-dis.lo): Update dependency list.
	* Makefile.in: Regenerate.

2004-11-22  Ravi Ramaseshan  <ravi.ramaseshan@codito.com>

	* opcode/arc-opc.c (insert_base): Modify ls_operand[LS_OFFSET] to
	reflect the change to the short immediate syntax.

2004-11-19  Alan Modra  <amodra@bigpond.net.au>

	* or32-opc.c (debug): Warning fix.
	* po/POTFILES.in: Regenerate.

	* maxq-dis.c: Formatting.
	(print_insn): Warning fix.

2004-11-17  Daniel Jacobowitz  <dan@codesourcery.com>

	* arm-dis.c (WORD_ADDRESS): Define.
	(print_insn): Use it.  Correct big-endian end-of-section handling.

2004-11-08  Inderpreet Singh   <inderpreetb@nioda.hcltech.com>
	    Vineet Sharma      <vineets@noida.hcltech.com>

	* maxq-dis.c: New file.
	* disassemble.c (ARCH_maxq): Define.
 	(disassembler): Add 'print_insn_maxq_little' for handling maxq
	instructions..
	* configure.in: Add case for bfd_maxq_arch.
	* configure: Regenerate.
	* Makefile.am: Add support for maxq-dis.c
	* Makefile.in: Regenerate.
	* aclocal.m4: Regenerate.

2004-11-05  Tomer Levi  <Tomer.Levi@nsc.com>

	* crx-opc.c (crx_optab): Rename 'arg_icr' to 'arg_idxr' for Index register
	mode.
	* crx-dis.c: Likewise.

2004-11-04  Hans-Peter Nilsson  <hp@axis.com>

	Generally, handle CRISv32.
	* cris-dis.c (TRACE_CASE): Define as (disdata->trace_case).
	(struct cris_disasm_data): New type.
	(format_reg, format_hex, cris_constraint, print_flags)
	(get_opcode_entry): Add struct cris_disasm_data * parameter.  All
	callers changed.
	(format_sup_reg, print_insn_crisv32_with_register_prefix)
	(print_insn_crisv32_without_register_prefix)